cluster/apps/default/homer/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homer
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`homer.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        # - name: basicauth
      services:
        - name: homer
          namespace: default
          port: 8080
  tls:
    # Use the secret generated by cert-manager
    secretName: "${SECRET_DOMAIN/./-}-tls"
